css/style.css
/* RESET */

*{
    margin:0;
    padding: 0;
    box-sizing: border-box;
}



/* GENERICS */

header{
    height: 100px;
    background-color: mediumaquamarine;
    
}


.column-left{
    min-height: 400px;
    width: 60%;
    background-color: lightskyblue;
    border: 2px dashed black;
}

.column-right{
    min-height: 400px;
    width: 40%;
    background-color: pink;
    border: 2px dashed black;
}


/* UTILITY */

.d-flex{
    display: flex;
}

.c-center{
    max-width: 1080px;
    margin: auto;
}

.bg-gray{
    background-color: gray;
}

/* HEADER */

.container-header{
    background-color: gold;
   
}

.logo{
    width: 25%;
    height: 50px;
    border: 2px dashed black;
}
 
.nav-link{
    height: 50px;
    width: 50%;
    border: 2px dashed black;


}

.login{
    height: 50px;
    width: 25%;
    border: 2px dashed black;

}

/* SECTION HEAD */

.section-head{
    min-height: 500px;
    background-color: blue;
}

.content-head{
    width: 60%;
    height: 400px;
    background-color: plum;
    border: 2px dashed black;
}

/* MAIN COLUMN AND CONTENT */

.main-content{
    flex-direction: row;
    padding:50px    
}

.main-content-reverse{
    flex-direction: row-reverse;    
}

.content{
    min-height:600px;
    background-color: green;
    border: 2px dashed black;
    padding: 50px;
}

/* COLUMN */

.column{
    background-color: #23272A;
}

.container-col-main{
    padding: 50px 0;

}

.column-social{
    background-color: pink;
    border: 2px dashed black;
    min-height: 400px;
    width: 30%;
}

.container-col-right{
    background-color: aqua;
    border: 3px dashed white;
    min-height: 400px;
    width: 70%;
    flex-direction: row;

}

.col-left, .col-medium-left, .column-right, .col-right{
    width: calc(100% / 4);
    min-height: 400px;
    border: 2px dashed black;
}

/* FOOTER */

.bg-footer{
    background-color: #23272A;
    min-height: 150px;
    border-top: 10px solid gray;
    border-bottom: 10px solid gray;
}   

.container-footer{
    background-color: mediumaquamarine;
    min-height: 100px;
    justify-content: space-between;
}

#logo-footer{
    width: 100px;
    height: 50px;
    background-color: pink;
    border: 2px dashed black;
}

#btn{
    width: 100px;
    height: 50px;
    background-color: pink;
    border: 2px dashed black;
}

